SFDCProject/src/objects/DocuSign_Log__c.object
<CustomObject>
    <fields>
        <fullName>Envelop_Id__c</fullName>
        <label>Envelop Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Body__c</fullName>
        <label>Request Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <label>Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Body__c</fullName>
        <label>Response Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>DocuSign Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Envelop_Id__c</columns>
        <columns>Response__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>DocuSign Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocuSign Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>